добавляет изображения и ссылки

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
   <body>
     <header class="page-header">
-      <div class="container">https://vk.com/id17878148</div>
+      <div class="container">
+    <a class="header-email" href="mailto:hrba@yandex.ru">hrba@yandex.ru</a>
+      </div>
     </header>
 
     <section class="hero-image">
@@ -19,7 +21,10 @@
 
     <section class="intro">
       <div class="container"><h2 class="subheading">Давайте познакомимся</h2>
-      <h3>Пара слов о себе</h3>
+      <figure class="user-image">
+  <img src="files/user.jpg" width="928" height="536" alt="Фотография Неопознанного Енота">
+</figure>
+<h3>Пара слов о себе</h3>
       <p>Два высших образования (специалист - финансы и кредит, магистр-инженер - теплогазоснабжение).
 	  Работала по разным направлениям (тепло, оператор 1С, снабженец). Решила заняться веб-разработкой.</p>
       <h3>Чем могу быть полезен</h3>
@@ -29,15 +34,19 @@
     <section class="portfolio">
       <div class="container"><h2 class="subheading">Мои работы</h2>
 
-      <h3>Сайт инструктора Кекса</h3>
-      <p>Небольшой лендинг о школе для начинающих.</p>
+      <figure class="project-image">
+  <img src="files/project.jpg" width="928" height="536" alt="Cайт инструктора Кекса">
+</figure>
+	  <h3>Сайт инструктора Кекса</h3>
+      <p> Мой первый сайт</p>
+	  <a class="button" href="source/project/index.html">Открыть страницу</a>
 
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p></div>
     </section>
 
     <footer class="page-footer">
-     <div class="container">https://vk.com/id17878148</div>
+     <div class="container"><a class="footer-email" href="mailto:hrba@yandex.ru">hrba@yandex.ru</a></div>
     </footer>
   </body>
 </html>
